Changed bg, character sprites and fixed jump movement

--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@ body, html {
 
 .bg {
     /* The image used */
-    /*background-image: url("assets/webpage/bg2.jpg");*/
+    background-image: url("assets/webpage/bg2.jpg");
 
-    background-color: #88167c;
+    /*background-color: #88167c;*/
     /* Full height */
     height: 100%;
 
@@ -93,7 +93,7 @@ body, html {
     display: flex;
     /*flex-direction: row;*/
     /*flex-wrap: wrap;*/
-    width: 100%;
+    /*width: 100%;*/
     /*justify-content: center;*/
     padding-left: 20em;
 }
